--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es2017",
-        "module": "commonjs",
-        "strict": true,
-        "moduleResolution": "node",
-        "noImplicitThis": true,
-        "alwaysStrict": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "forceConsistentCasingInFileNames": true,
-        "lib": [
-            "es2015",
-            "esnext.asynciterable"
-        ],
-        "sourceMap": true,
-        "typeRoots": [
-            "./node_modules/@types",
-            "./types"
-        ],
-        "types": [
-            "node",
-            "truffle-contracts",
-            "mocha"
-        ]
+      "target": "es2015",
+      "module": "commonjs",
+      "strict": true,
+      "esModuleInterop": true,
+      "resolveJsonModule": true
     },
-    "include": [
-        "**/*.ts"
-    ],
-    "exclude": [
-        "node_modules",
-        "example",
-        "build"
+    "files": [
+          "./buidler.config.ts",
+          "./node_modules/@nomiclabs/buidler-ethers/src/type-extensions.d.ts",
+          "./node_modules/@nomiclabs/buidler-waffle/src/type-extensions.d.ts",
+          "./node_modules/truffle-typings/index.d.ts",
+          "./@types/types.d.ts"
     ]
-}
+  }
+  
